# server

./: LICENSE  README.md  chatroom_nginx.conf  client.py  server.py  structure.md  test.py
asset/: chatroom.xbm
client/: client.py  config.json  handle_config.py  status.py
docs/: chatroom_nginx.conf  db.sql  db.xml  env_var.md  msg_code.md  redis_struct.md  rules.md  state_code.md  struct and api.md  structure.md
front/: chat.html  chatroom.html  createRoom.html  index.html  joinRoom.html  login.html  register.html
server/: CMakeLists.txt  callbacks.h  main.cpp  message.h  server.cpp  server.properties  users.h  vcpkg.json
server/activeRecordModel/: CMakeLists.txt  Message.cpp  Message.h  Room.cpp  Room.h  User.cpp  User.h  UserRoomRelation.cpp  UserRoomRelation.h
server/activeRecordModel/include/ChatRoomDB/: Message.h  Room.h  User.h  UserRoomRelation.h
server/activeRecordModel/src/: Message.cpp  Room.cpp  User.cpp  UserRoomRelation.cpp
server/data/: DataFacade.h  DataManager.cpp  DataManager.h  RoomManager.cpp  RoomManager.h  UserManager.cpp  UserManager.h  chat_http_jwt.h  chat_jwt.h
server/message/: MessageManager.cpp  MessageManager.h  MsgFacade.h  chat_ws_jwt.h
server/net/: ChatHttp.cpp  ChatHttp.h  Route.h
server/old edition/: .gitignore  CMakeLists.txt  server.cpp
server/support/: const.h  poco_headers.h  state_code.h
